updated currents date

--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,7 @@
 layout: layouts/page.njk
 title: Fronteras Micro-film Festival
 description: June 2-4, 2023 -- Fusion, Albuquerque, New Mexico
-description2: June 16-25, 2023 -- Currents New Media, Santa Fe, New Mexico
+description2: June 16-18, 2023 -- Currents New Media, Santa Fe, New Mexico
 description3: TBD -- MOOD Studios, Albuquerque, New Mexico
 navlogo: customs
 ---
@@ -73,7 +73,7 @@ var x = setInterval(function() {
 </div>
 
 <!-- xxxxxxxxxxxxxxxxxxxxxxxxxx News xxxxxxxxxxxxxxxxxxxxxxxxxx -->
-<div class="blogsect">
+{# <div class="blogsect">
 <div class="mangahalftone mangapanel" style="background-image:url(/img/6.png); background-size:100% auto;background-position:center;">
 </div>
 <div class="">
@@ -82,7 +82,7 @@ var x = setInterval(function() {
 {% set postslistCounter = collections.posts | length %}
 {% include "components/postslist.njk" %}
 </div>
-</div>
+</div> #}
 
 <!-- xxxxxxxxxxxxxxxxxxxxxxxxxx Manifesto xxxxxxxxxxxxxxxxxxxxxxxxxx -->
 <!--
