--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,9 +6,17 @@
     <title>{{ renderData.title or title or metadata.title }}</title>
     <meta name="Description" content="{{ renderData.description or description or metadata.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta itemprop="name" content="{{ renderData.title or title or metadata.title }}">
+<meta itemprop="description" content="{{ renderData.description or description or metadata.description }}">
+<meta itemprop="image" content="/img/bigbend.jpg">
 <meta property="og:type" content="website" />
 <meta property="og:title" content="{{ renderData.title or title or metadata.title }}" />
 <meta property="og:description" content="{{ renderData.description or description or metadata.description }}" />
+<meta property="og:image" content="/img/bigbend.jpg" />
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="{{ renderData.title or title or metadata.title }}">
+<meta name="twitter:description" content="{{ renderData.description or description or metadata.description }}">
+<meta name="twitter:image" content="/img/bigbend.jpg">
     <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/all.min.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
