updated button styling on ios safari hopefully

--- a/docs/css/global.scss
+++ b/docs/css/global.scss
@@ -914,6 +914,7 @@ button {
   font-family: "Roboto Mono",monospace;
   min-width: 75px;
   min-height: 40px;
+  -webkit-appearance: none;
 }
 
 input {
