--- a/src/_includes/css/global.scss
+++ b/src/_includes/css/global.scss
@@ -915,6 +915,12 @@ button {
   min-width: 75px;
   min-height: 40px;
   -webkit-appearance: none;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: .5;
+  transition: .1s;
 }
 
 input {
