added currents to sponsors, added faq item

--- a/src/extrapages/faq.njk
+++ b/src/extrapages/faq.njk
@@ -156,6 +156,22 @@ eleventyNavigation:
   </div>
   <div id="aspect-content">
     <div class="aspect-tab" id="categories">
+      <input id="item-32" type="checkbox" class="aspect-input" name="aspect">
+      <label for="item-32" class="aspect-label"></label>
+      <div class="aspect-content">
+          <div class="aspect-info">
+              <h2>Do I need to make a new film to submit?</h2>
+          </div>
+      </div>
+      <div class="aspect-tab-content">
+          <div class="sentiment-wrapper">
+            <p><b>Nope.</b> We accept old and new films alike. If you made a film 20 years ago that you think fits our festival, by all means submit!</p>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div id="aspect-content">
+    <div class="aspect-tab" id="categories">
       <input id="item-25" type="checkbox" class="aspect-input" name="aspect">
       <label for="item-25" class="aspect-label"></label>
       <div class="aspect-content">
