--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,8 +6,8 @@ layout: layouts/base.njk
 {% if thumbnail %}
 <img style="max-width: 100%" src="{{ thumbnail }}"/>
 {% endif %}
-<h1 style="margin-bottom:0;">{{ title }}</h1>
-<p style="margin:0 0 30px;"><small>{{ description }}</small></p>
+<h1 class="mobile-h1" style="margin-bottom:0;">{{ title }}</h1>
+{# <p style="margin:0 0 30px;"><small>{{ description }}</small></p> #}
 <p style="margin:0 0 30px;"><small>{{ date }}</small></p>
 <hr>
 
