--- a/src/archive.njk
+++ b/src/archive.njk
@@ -3,7 +3,11 @@ layout: layouts/page.njk
 title: News
 description: News on the festival.
 permalink: /posts/
-navlogo: handwave
+navlogo: news
+backgroundcolor: ff00ff
+eleventyNavigation:
+  key: News
+  order: 2
 
 ---
 {% set postslist = collections.posts %}
