--- a/src/extrapages/sponsors.njk
+++ b/src/extrapages/sponsors.njk
@@ -7,7 +7,7 @@ backgroundcolor: 39ff14
 permalink: /sponsor/
 eleventyNavigation:
   key: Sponsors
-  order: 5
+  order: 4
 
 ---
 
@@ -36,6 +36,11 @@ eleventyNavigation:
           </div>
           <div style="padding: 1rem; max-width: 50%;">
                   <a href="https://www.cabq.gov/urban-enhancement-trust-fund/about-the-trust-fund" target="_blank"><img src="/img/uetf.png"></a>
+          </div>
+  </div>
+  <div style="display:flex; align-items:center; justify-content:space-evenly;">
+          <div style="padding: 1rem; max-width: 50%;">
+                  <a href="https://abqfmi.com/" target="_blank"><img src="/img/afmi.png"></a>
           </div>
   </div>
   <br />
