--- a/src/index.njk
+++ b/src/index.njk
@@ -5,9 +5,10 @@ description: June 2-4, 2023 -- Fusion, Albuquerque, New Mexico
 description2: June 16-18, 2023 -- Currents New Media, Santa Fe, New Mexico
 description3: TBD -- MOOD Studios, Albuquerque, New Mexico
 navlogo: customs
+image: /img/bigbend.jpg
 ---
 <!-- xxxxxxxxxxxxxxxxxxxxxxxxxx Submit xxxxxxxxxxxxxxxxxxxxxxxxxx -->
- <button style="margin: 0 auto; display: block; margin-top: 40px; font-size: xxx-large;" onclick=" window.open('https://filmfreeway.com/Fronterasmicrofilmfestival','_blank')">Submit</button>
+ <button style="margin: 0 auto; display: block; margin-top: 40px; font-size: -webkit-xxx-large;" onclick=" window.open('https://filmfreeway.com/Fronterasmicrofilmfestival','_blank')">Submit</button>
 
 <!-- Countdown -->
 <p style="text-align: center; max-width: none; font-weight: bold;">Deadline: <u>May 2, 11:59 PM MT</u>.</p>
