--- a/src/_includes/css/defaults.scss
+++ b/src/_includes/css/defaults.scss
@@ -138,7 +138,7 @@ pre {
 /* Tags */
 .tag {
   display: inline-block;
-  vertical-align: text-top;
+  vertical-align: middle;
   text-transform: uppercase;
   font-size: 0.625em; /* 10px /16 */
   padding: 2px 4px;
