--- a/src/extrapages/faq.njk
+++ b/src/extrapages/faq.njk
@@ -222,7 +222,7 @@ eleventyNavigation:
               <li class="li5"><p><strong><a href="https://currentsnewmedia.org/festivals/currents-new-media-2023/" target="_blank">Currents New Media 2023</a> &mdash; </strong>June 16-18, 2023.</p><p><a href="https://www.google.com/maps/place/SANTA+FE+COUNTY+FAIR+BUILDING/@35.6395733,-105.999311,17z/data=!3m1!4b1!4m6!3m5!1s0x87185a40742d1c67:0x63cc0148c40a287a!8m2!3d35.639569!4d-105.9948317!16s%2Fg%2F11mvh3ln96" target="_blank">3229 Rodeo Rd, Santa Fe, NM 87507, USA.</a></p></li>
               <li class="li5"><p><strong><a href="https://allthingsmood.com/" target="_blank">MOOD</a> &mdash; </strong>TBD 2023</p><p><a href="https://www.google.com/maps/place/MOOD/@35.081776,-106.6140422,17z/data=!3m1!4b1!4m6!3m5!1s0x87220bb5a9f9a0af:0x6fadae02b188071a!8m2!3d35.0817716!4d-106.6118482!16s%2Fg%2F11q2pq419m" target="_blank">3001 Monte Vista Blvd NE, Albuquerque, NM 87106, USA.</a></p></li>
             </ol>
-            <p>As a selected filmmaker, you are entitled to 1 (one) free ticket to the MOOD live event -- the Fusion event is free to the public and the Currents New Media event charges for tickets separately. Come hang with us and check out all the films!</p>
+            <p>As a selected filmmaker, you are entitled to 1 (one) free ticket to the Fusion live event -- the MOOD event is free to the public and the Currents New Media event charges for tickets separately. Come hang with us and check out all the films!</p>
           </div>
       </div>
     </div>
