added johnnyboards as a sponsor, updated home page to close submissions

--- a/src/extrapages/sponsors.njk
+++ b/src/extrapages/sponsors.njk
@@ -46,6 +46,11 @@ eleventyNavigation:
                   <a href="https://albuquerquerecycling.net" target="_blank"><img src="/img/abq-computer-electronics-recycling.png"></a>
           </div>
   </div>
+  <div style="display:flex; align-items:center; justify-content:space-evenly;">
+          <div style="padding: 1rem; max-width: 50%;">
+                  <a href="https://johnnyboards.com/" target="_blank"><img src="/img/johnnyboards.png"></a>
+          </div>
+  </div>
   <br />
   <h3>Interested in sponsoring the festival?</h3>
   <p>Fill out the form below and we'll respond right away.</p>
