--- a/src/index.njk
+++ b/src/index.njk
@@ -8,13 +8,12 @@ navlogo: customs
 image: /img/bigbend.jpg
 ---
 <!-- xxxxxxxxxxxxxxxxxxxxxxxxxx Submit xxxxxxxxxxxxxxxxxxxxxxxxxx -->
- <button style="margin: 0 auto; display: block; margin-top: 40px; font-size: -webkit-xxx-large;" onclick=" window.open('https://filmfreeway.com/Fronterasmicrofilmfestival','_blank')">Submit</button>
+ {# <button style="margin: 0 auto; display: block; margin-top: 40px; font-size: -webkit-xxx-large;" onclick=" window.open('https://filmfreeway.com/Fronterasmicrofilmfestival','_blank')">Submit</button> #}
 
 <!-- Countdown -->
-<p style="text-align: center; max-width: none; font-weight: bold;">Deadline: <u>May 2, 11:59 PM MT</u>.</p>
-<p style="text-align: center; max-width: none; font-weight: bold;">Time left: <span class="blink-me" id="demo"></span></p>
-
-<script>
+{# <p style="text-align: center; max-width: none; font-weight: bold;">Deadline: <u>May 2, 11:59 PM MT</u>.</p>
+<p style="text-align: center; max-width: none; font-weight: bold;">Time left: <span class="blink-me" id="demo"></span></p> #}
+{# <script>
 // Set the date we're counting down to
 var countDownDate = new Date("05/02/2023 23:59:59").getTime();
 
@@ -43,7 +42,11 @@ var x = setInterval(function() {
     document.getElementById("demo").innerHTML = "EXPIRED";
   }
 }, 1000);
-</script>
+</script> #}
+
+<!-- xxxxxxxxxxxxxxxxxxxxxxxxxx Thanks for submitting xxxxxxxxxxxxxxxxxxxxxxxxxx -->
+</br>
+<p style="text-align: center; max-width: none; font-weight: bold;"><b>Submissions for the 2023 Fronteras Micro-film Festival are closed. Thanks to those that submitted!</b></p>
 
 <!-- xxxxxxxxxxxxxxxxxxxxxxxxxx Big Bend xxxxxxxxxxxxxxxxxxxxxxxxxx -->
 <a href="/faq/"><figure><img class="mangapanel" alt="bigbend" src="/img/bigbend.jpg"/><figcaption>More Info</figcaption></figure></a>
