--- a/src/_includes/components/navbar.njk
+++ b/src/_includes/components/navbar.njk
@@ -29,6 +29,8 @@
             <h2 class="home"><a href="{{ '/' | url }}">🗞️🗞️🗞️</a></h1>
           {% elif navlogo =="emojipeach" %}
             <h2 class="home"><a href="{{ '/' | url }}">🍑🍑🍑</a></h1>
+          {% elif navlogo =="thanks" %}
+            <h2 class="home"><a href="{{ '/' | url }}">🙏🙏🙏</a></h1>
           {% else %}
            <h2 class="home"><a href="{{ '/' | url }}">Fronteras</a></h1>
           {% endif %}
