--- a/src/extrapages/sponsors.njk
+++ b/src/extrapages/sponsors.njk
@@ -50,6 +50,9 @@ eleventyNavigation:
           <div style="padding: 1rem; max-width: 50%;">
                   <a href="https://johnnyboards.com/" target="_blank"><img src="/img/johnnyboards.png"></a>
           </div>
+          <div style="padding: 1rem; max-width: 50%;">
+                  <a href="https://www.cabq.gov/artsculture/" target="_blank"><img src="/img/cabq-public-arts.png"></a>
+          </div>
   </div>
   <br />
   <h3>Interested in sponsoring the festival?</h3>
