fixed padding on new sponsor images

--- a/src/extrapages/sponsors.njk
+++ b/src/extrapages/sponsors.njk
@@ -47,10 +47,10 @@ eleventyNavigation:
           </div>
   </div>
   <div style="display:flex; align-items:center; justify-content:space-evenly;">
-          <div style="padding: 1rem; max-width: 50%;">
+          <div style="padding: 2.5rem; max-width: 50%;">
                   <a href="https://johnnyboards.com/" target="_blank"><img src="/img/johnnyboards.png"></a>
           </div>
-          <div style="padding: 1rem; max-width: 50%;">
+          <div style="max-width: 50%;">
                   <a href="https://www.cabq.gov/artsculture/" target="_blank"><img src="/img/cabq-public-arts.png"></a>
           </div>
   </div>
