hiding the shop page from the nav, changing the FAQ to reflect that we picked 20 films

--- a/src/extrapages/shop.njk
+++ b/src/extrapages/shop.njk
@@ -6,8 +6,7 @@ navlogo: cash
 backgroundcolor: 40e0d0
 permalink: /shop/
 eleventyNavigation:
-  key: Shop
-  order: 5
+  hide: true
 ---
 
 {% include "components/header.njk" %}
