add navlogo to ghost truck page

--- a/src/_includes/components/navbar.njk
+++ b/src/_includes/components/navbar.njk
@@ -43,6 +43,8 @@
             <h2 class="home"><a href="{{ '/' | url }}">🔦🔦🔦</a></h1>
           {% elif navlogo =="loudspeaker" %}
             <h2 class="home"><a href="{{ '/' | url }}">📢📢📢</a></h1>
+          {% elif navlogo =="truck" %}
+            <h2 class="home"><a href="{{ '/' | url }}">🚚🚚🚚</a></h1>
           {% else %}
            <h2 class="home"><a href="{{ '/' | url }}">Fronteras</a></h1>
           {% endif %}
