added volumen artist statement

--- a/src/extrapages/installations/volumen-de-voz.njk
+++ b/src/extrapages/installations/volumen-de-voz.njk
@@ -17,6 +17,11 @@ volumen:
   <div class="full-width-post">
     <img src="/img/sketches/volumen-de-voz.jpg" alt="volumen" class="post-hero installation-hero">
     </br>
+    <p>The goal of the installation Volumen de Voz (Volume of Voice) is to invite the audience to confront three different perspectives.</p>
+    <p>"The Refugees" behind the chain link fence represent the vulnerable, disenfranchised migrant populations who so often struggle to have their perspectives seen and heard. Between language, bureaucratic, and physical barriers, there exist innumerable hurdles that prevent these populations from having their voices amplified as loudly as those of their oppressors.</p>
+    <p>"The Suit" represents the ease of access to the perspectives of those in power. Far fewer barriers exist for people of privilege and power to have their voices not only heard but amplified.</p>
+    <p>The velvet stanchions serve as a reminder to the audience that all art is both presented and observed through filters. Any perspective gained by observation of art is, though valuable, still inauthentic when compared to the potential perspective to be gained by observation of the authentic situation art is representing. Though we can and should attempt to amplify the voices of the vulnerable and disenfranchised, our representation will always be distorted by the comfortable distance from which we are able to view an uncomfortable situation.</p>
+    </br>
   </div>
   <div class="flex-row insta-row" markdown="0">
     <div class="center-flex flex-column insta-column">
