updated space between home statement

--- a/src/extrapages/installations/the-space-between-home.njk
+++ b/src/extrapages/installations/the-space-between-home.njk
@@ -17,8 +17,7 @@ clouds:
 <div class="bigcontainer">
   <div class="full-width-post">
     <img src="/img/sketches/the-space-between-home.jpg" alt="clouds" class="post-hero installation-hero">
-    <p>"The Space Between Home" is an indoor installation that explores the physical and psychological distance that exists between a person's place of origin, and the place they migrate to. It positions two couches across from one another, with a series of transparent and opaque cloud-like sheets of fabric hanging between them. Viewers can sit at either couch and watch films projected onto the clouds. They are also able to see the feet of other viewers sitting across from them, peeking out from the bottom of the "clouds." The installation is whimsical and light, yet carries a sense of tension, as visitors are aware of the shrouded audience across from them -- wondering and thinking of their experience.</p>
-    <p>"The Space Between Home" is inspired by the duality of identity and destiny many people who migrate experience. Specifically, I (Helen) drew from the experience of being the daughter of an immigrant mother from Caracas, Venezuela.</p>
+    <p>"The Space Between Home" explores the physical and psychological distance that exists between a person's place of origin, and the place they migrate to. The cloud-like installation evokes the physical and imagined space many travel as they cross borders. It is deeply inspired by Helen's experience being the child of an immigrant mother from Caracas, Venezuela. Her family has traveled by plane great distances, sometimes for short visits, other times leaving their home and not knowing if, or when they may return. "The Space Between Home" evokes the duality of identity and destiny that many people who migrate, and their families, experience.</p>
     </br>
   </div>
   <div class="flex-row insta-row" markdown="0">
