added links to the films on the installation pages

--- a/src/extrapages/installations/a-ghost-truck.njk
+++ b/src/extrapages/installations/a-ghost-truck.njk
@@ -36,12 +36,12 @@ truck:
   </br>
   <div class="full-width-post">
     <h3 style="text-align:center;">Films screened</h3>
-    <p style="text-align:center;">Bag Check</p>
-    <p style="text-align:center;">Coyote</p>
-    <p style="text-align:center;">Moving at the Speed of Thought</p>
-    <p style="text-align:center;">Returnal</p>
-    <p style="text-align:center;">This Border</p>
-    <p style="text-align:center;">Who Were These Privileged Men?</p>
+    <p style="text-align:center;"><a href="/bag-check/">Bag Check</a></p>
+    <p style="text-align:center;"><a href="/coyote/">Coyote</a></p>
+    <p style="text-align:center;"><a href="/moving-at-the-speed-of-thought/">Moving at the Speed of Thought</a></p>
+    <p style="text-align:center;"><a href="/returnal/">Returnal</a></p>
+    <p style="text-align:center;"><a href="/this-border/">This Border</a></p>
+    <p style="text-align:center;"><a href="/who-were-these-privileged-men/">Who Were These Privileged Men?</a></p>
   </div>
   </br>
 </div>
