--- a/src/extrapages/installations/by-boat.njk
+++ b/src/extrapages/installations/by-boat.njk
@@ -34,11 +34,11 @@ boat:
   </br>
   <div class="full-width-post">
     <h3 style="text-align:center;">Films screened</h3>
-    <p style="text-align:center;">Bag Check</p>
-    <p style="text-align:center;">Creat</p>
-    <p style="text-align:center;">Santa Fe Resident</p>
-    <p style="text-align:center;">The Birch Tree</p>
-    <p style="text-align:center;">The Dream of Being Free</p>
+    <p style="text-align:center;"><a href="/bag-check/">Bag Check</a></p>
+    <p style="text-align:center;"><a href="/creat/">Creat</a></p>
+    <p style="text-align:center;"><a href="/santa-fe-resident/">Santa Fe Resident</a></p>
+    <p style="text-align:center;"><a href="/the-birch-tree/">The Birch Tree</a></p>
+    <p style="text-align:center;"><a href="/the-dream-of-being-free/">The Dream of Being Free</a></p>
   </div>
   </br>
 </div>
