--- a/src/extrapages/installations/the-space-between-home.njk
+++ b/src/extrapages/installations/the-space-between-home.njk
@@ -30,7 +30,7 @@ clouds:
   </div>
   </br>
   <div class="full-width-post">
-    <h3 style="text-align:center;">All selected films screened</h3>
+    <h3 style="text-align:center;"><a href="/films/">All selected films screened</a></h3>
   </div>
   </br>
 </div>
