--- a/src/extrapages/installations/tower-of-cower.njk
+++ b/src/extrapages/installations/tower-of-cower.njk
@@ -41,11 +41,13 @@ tower:
   </br>
   <div class="full-width-post">
     <h3 style="text-align:center;">Films screened</h3>
-    <p style="text-align:center;">Follow Me Quietly</p>
-    <p style="text-align:center;">Les Yeux (The Eyes)</p>
-    <p style="text-align:center;">Pick</p>
-    <p style="text-align:center;">The Darkest Place</p>
-    <p style="text-align:center;">They Came From Planet X</p>
+    <p style="text-align:center;"><a href="/follow-me-quietly/">Follow Me Quietly</a></p>
+    <p style="text-align:center;"><a href="/les-yeux/">Les Yeux (The Eyes)</a></p>
+    <p style="text-align:center;"><a href="/pick/">Pick</a></p>
+    <p style="text-align:center;"><a href="/the-darkest-place/">The Darkest Place</a></p>
+    <p style="text-align:center;"><a href="/they-came-from-planet-x/">They Came From Planet X</a></p>
+    <p style="text-align:center;"><a href="/you-came-first/">You Came First</a></p>
+
   </div>
   </br>
 </div>
