--- a/src/extrapages/installations/untitled-undocumented.njk
+++ b/src/extrapages/installations/untitled-undocumented.njk
@@ -32,11 +32,10 @@ untitled:
   </br>
   <div class="full-width-post">
     <h3 style="text-align:center;">Films screened</h3>
-    <p style="text-align:center;">Border Wall Construction, 2020</p>
-    <p style="text-align:center;">This Border</p>
-    <p style="text-align:center;">Untitled Indigenous Film</p>
-    <p style="text-align:center;">Who Were These Privileged Men?</p>
-    <p style="text-align:center;">You Came First</p>
+    <p style="text-align:center;"><a href="/border-wall-construction-2020/">Border Wall Construction, 2020</a></p>
+    <p style="text-align:center;"><a href="/this-border/">This Border</a></p>
+    <p style="text-align:center;"><a href="/untitled-indigenous-film/">Untitled Indigenous Film</a></p>
+    <p style="text-align:center;"><a href="/who-were-these-privileged-men/">Who Were These Privileged Men?</a></p>
   </div>
   </br>
 </div>
