--- a/src/extrapages/installations/the-hands-that-hold-us.njk
+++ b/src/extrapages/installations/the-hands-that-hold-us.njk
@@ -31,7 +31,8 @@ hands:
   </div>
   </br>
   <div class="full-width-post">
-    <h3 style="text-align:center;">All selected films screened</h3>
+    <h3 style="text-align:center;"><a href="/films/">All selected films screened</a></h3>
+
   </div>
   </br>
 </div>
