--- a/src/extrapages/films/the-darkest-place.njk
+++ b/src/extrapages/films/the-darkest-place.njk
@@ -11,7 +11,7 @@ permalink: /the-darkest-place/
 </br>
 <div class="bigcontainer">
   <div class="full-width-post">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/U6rcBOWV3h8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="80%" height="315" src="https://www.youtube.com/embed/U6rcBOWV3h8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </br>
     <p>"We shot this short documentary on the U.S.-México border, in the International Dark Sky Reserve primarily within Big Bend National Park. We were inspired by a paradox we observed — the very real impact national borders have on people, living things and the natural landscape of the region, and the tangible artificiality of the border in the face of the capaciousness of the night sky."</p>
     </br>
