updated they came from planet x, added image metadata to films and installation pages, made winner announcement on home page wider

--- a/src/extrapages/films/bag-check.njk
+++ b/src/extrapages/films/bag-check.njk
@@ -5,6 +5,7 @@ description: Matthew Atkins
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /bag-check/
+image: /img/films/bag-check.jpg
 ---
 
 {% include "components/header.njk" %}
