--- a/src/extrapages/films/border-wall-construction-2020.njk
+++ b/src/extrapages/films/border-wall-construction-2020.njk
@@ -5,6 +5,7 @@ description: Matthew Chase-Daniel and Julie Chase-Daniel
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /border-wall-construction-2020/
+image: /img/films/border-wall-construction-2020.jpg
 ---
 
 {% include "components/header.njk" %}
