--- a/src/extrapages/films/coyote.njk
+++ b/src/extrapages/films/coyote.njk
@@ -5,6 +5,7 @@ description: Dusty Deen
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /coyote/
+image: /img/films/coyote.jpg
 ---
 
 {% include "components/header.njk" %}
