--- a/src/extrapages/films/creat.njk
+++ b/src/extrapages/films/creat.njk
@@ -5,6 +5,7 @@ description: Jonathan Nagel
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /creat/
+image: /img/films/creat.jpg
 ---
 
 {% include "components/header.njk" %}
