--- a/src/extrapages/films/ding.njk
+++ b/src/extrapages/films/ding.njk
@@ -5,6 +5,7 @@ description: Jonathan Nagel
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /ding/
+image: /img/films/ding.jpg
 ---
 
 {% include "components/header.njk" %}
