--- a/src/extrapages/films/fences.njk
+++ b/src/extrapages/films/fences.njk
@@ -5,6 +5,7 @@ description: Benjamin A. Fuller
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /fences/
+image: /img/films/fences.jpg
 ---
 
 {% include "components/header.njk" %}
