--- a/src/extrapages/films/follow-me-quietly.njk
+++ b/src/extrapages/films/follow-me-quietly.njk
@@ -5,6 +5,7 @@ description: Wheeler Winston Dixon
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /follow-me-quietly/
+image: /img/films/follow-me-quietly.jpg
 ---
 
 {% include "components/header.njk" %}
