--- a/src/extrapages/films/les-yeux.njk
+++ b/src/extrapages/films/les-yeux.njk
@@ -5,6 +5,7 @@ description: Walker Stovall
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /les-yeux/
+image: /img/films/les-yeux.jpg
 ---
 
 {% include "components/header.njk" %}
