--- a/src/extrapages/films/moving-at-the-speed-of-thought.njk
+++ b/src/extrapages/films/moving-at-the-speed-of-thought.njk
@@ -5,6 +5,7 @@ description: Amy Collado
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /moving-at-the-speed-of-thought/
+image: /img/films/moving-at-the-speed-of-thought.jpg
 ---
 
 {% include "components/header.njk" %}
