--- a/src/extrapages/films/my-uncle-was-el-santo.njk
+++ b/src/extrapages/films/my-uncle-was-el-santo.njk
@@ -5,6 +5,7 @@ description: Jorge Vivero Gómez
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /my-uncle-was-el-santo/
+image: /img/films/my-uncle-was-el-santo.jpg
 ---
 
 {% include "components/header.njk" %}
