--- a/src/extrapages/films/pick.njk
+++ b/src/extrapages/films/pick.njk
@@ -5,6 +5,7 @@ description: Shahoo Ahmadi
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /pick/
+image: /img/films/pick.jpg
 ---
 
 {% include "components/header.njk" %}
