--- a/src/extrapages/films/returnal.njk
+++ b/src/extrapages/films/returnal.njk
@@ -5,6 +5,7 @@ description: Santino Gonzales
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /returnal/
+image: /img/films/returnal.jpg
 ---
 
 {% include "components/header.njk" %}
