--- a/src/extrapages/films/santa-fe-resident.njk
+++ b/src/extrapages/films/santa-fe-resident.njk
@@ -5,6 +5,7 @@ description: Terry Ngo
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /santa-fe-resident/
+image: /img/films/santa-fe-resident.jpg
 ---
 
 {% include "components/header.njk" %}
