--- a/src/extrapages/films/the-birch-tree.njk
+++ b/src/extrapages/films/the-birch-tree.njk
@@ -5,6 +5,7 @@ description: Sundae
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /the-birch-tree/
+image: /img/films/the-birch-tree.jpg
 ---
 
 {% include "components/header.njk" %}
