--- a/src/extrapages/films/the-darkest-place.njk
+++ b/src/extrapages/films/the-darkest-place.njk
@@ -5,6 +5,7 @@ description: Jay Renteria, Ryan Lewis, Alonso Indacochea
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /the-darkest-place/
+image: /img/films/the-darkest-place.jpg
 ---
 
 {% include "components/header.njk" %}
