--- a/src/extrapages/films/the-dream-of-being-free.njk
+++ b/src/extrapages/films/the-dream-of-being-free.njk
@@ -5,6 +5,7 @@ description: Sasan Golfar
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /the-dream-of-being-free/
+image: /img/films/the-dream-of-being-free.jpg
 ---
 
 {% include "components/header.njk" %}
