--- a/src/extrapages/films/they-came-from-planet-x.njk
+++ b/src/extrapages/films/they-came-from-planet-x.njk
@@ -5,6 +5,7 @@ description: Brandon Carter
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /they-came-from-planet-x/
+image: /img/films/they-came-from-planet-x.jpg
 ---
 
 {% include "components/header.njk" %}
@@ -16,10 +17,12 @@ permalink: /they-came-from-planet-x/
       <img src="/img/films/they-came-from-planet-x.jpg" alt="planet x still" class="post-hero installation-hero">
     </div>
     </br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sj78a7oQKQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </br>
     <p>"Made in the style of a farcical wartime propaganda film, "They Came From Planet X" takes modern xenophobia juxtaposed against science fiction imagery and pokes fun at the fear of "foreign invaders". This short was made specifically for Fronteras with the hope of exploring the festival's important themes while experimenting with the look and tone of older sci-fi serials and propaganda films."</p>
     </br>
     <span>-- Brandon Carter</span><a name="instagram link" class="artist-insta" href="https://instagram.com/cartercinema/" target="_blank"><sub><i class="fab fa-instagram"></i></sub></a>
     </br>
-    <p>Brandon Carter is a lifelong fan of movies, music, artists, and art. He studied Digital Filmmaking at Eastern New Mexico University and has worked as a Locations Assistant, a Newscast Director, and a Multimedia Specialist for Animal Humane New Mexico in Albuquerque. Brandon continues to collaborate on long-form and short-form creative projects with the filmmaking collective Dust Wave and his partner Camille.</p>
+    <p>Brandon Carter is a lifelong fan of movies, music, artists, and art. He studied Digital Filmmaking at Eastern New Mexico University and has worked as a Locations Assistant, a Newscast Director, and a Multimedia Specialist for Animal Humane New Mexico in Albuquerque. Brandon continues to collaborate on long-form and short-form creative projects with the <a href="https://dustwave.xyz" target="_blank">Dust Wave</a> filmmaking collective and his partner Camille as part of <a href="https://www.instagram.com/spaceagedaydreamfilms" target="_blank">Space Age Daydream.</a></p>
     </br>
   </div>
