--- a/src/extrapages/films/this-border.njk
+++ b/src/extrapages/films/this-border.njk
@@ -5,6 +5,7 @@ description: Richard Malcolm
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /this-border/
+image: /img/films/this-border.jpg
 ---
 
 {% include "components/header.njk" %}
