--- a/src/extrapages/films/untitled-indigenous-film.njk
+++ b/src/extrapages/films/untitled-indigenous-film.njk
@@ -5,6 +5,7 @@ description: Samuel Shorty
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /untitled-indigenous-film/
+image: /img/films/untitled-indigenous-film.jpg
 ---
 
 {% include "components/header.njk" %}
