--- a/src/extrapages/films/who-were-these-privileged-men.njk
+++ b/src/extrapages/films/who-were-these-privileged-men.njk
@@ -5,6 +5,7 @@ description: Harrison C. Sim
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /who-were-these-privileged-men/
+image: /img/films/who-were-these-privileged-men.jpg
 ---
 
 {% include "components/header.njk" %}
