--- a/src/extrapages/films/you-came-first.njk
+++ b/src/extrapages/films/you-came-first.njk
@@ -5,6 +5,7 @@ description: Alonso Indacochea
 navlogo: emojianim
 backgroundcolor: F5F5F5
 permalink: /you-came-first/
+image: /img/films/you-came-first.jpg
 ---
 
 {% include "components/header.njk" %}
