--- a/src/extrapages/installations/a-ghost-truck.njk
+++ b/src/extrapages/installations/a-ghost-truck.njk
@@ -5,6 +5,7 @@ description: Jordyn Bernicke and Jay Renteria
 navlogo: truck
 backgroundcolor: F5F5F5
 permalink: /a-ghost-truck/
+image: /img/sketches/a-ghost-truck.jpg
 truck:
   - 1
   - 2
