--- a/src/extrapages/installations/by-boat.njk
+++ b/src/extrapages/installations/by-boat.njk
@@ -5,6 +5,7 @@ description: Jacklyn Le and James Rodriguez
 navlogo: boat
 backgroundcolor: 7fffd4
 permalink: /by-boat/
+image: /img/sketches/by-boat.jpg
 boat:
   - 1
   - 2
