--- a/src/extrapages/installations/the-hands-that-hold-us.njk
+++ b/src/extrapages/installations/the-hands-that-hold-us.njk
@@ -5,6 +5,7 @@ description: Helen Atkins and Will Geusz
 navlogo: handwave
 backgroundcolor: 2E6021
 permalink: /the-hands-that-hold-us/
+image: /img/sketches/the-hands-that-hold-us.jpg
 hands:
   - 1
   - 2
