--- a/src/extrapages/installations/the-space-between-home.njk
+++ b/src/extrapages/installations/the-space-between-home.njk
@@ -5,6 +5,7 @@ description: Helen Atkins and Will Geusz
 navlogo: clouds
 backgroundcolor: 4E9FE5
 permalink: /the-space-between-home/
+image: /img/sketches/the-space-between-home.jpg
 clouds:
   - 1
   - 2
