--- a/src/extrapages/installations/tower-of-cower.njk
+++ b/src/extrapages/installations/tower-of-cower.njk
@@ -5,6 +5,7 @@ description: Andres Indacochea, Laura Morris, Ryan Lewis, Kaidin Jarjusey and Al
 navlogo: tower
 backgroundcolor: F72119
 permalink: /tower-of-cower/
+image: /img/sketches/tower-of-cower.jpg
 tower:
   - 1
   - 2
