--- a/src/extrapages/installations/untitled-undocumented.njk
+++ b/src/extrapages/installations/untitled-undocumented.njk
@@ -5,6 +5,7 @@ description: Phillip Torres, Nadia Torres, and Dorian Torres
 navlogo: flashlight
 backgroundcolor: FFE417
 permalink: /untitled-undocumented/
+image: /img/sketches/untitled-undocumented.jpg
 untitled:
   - 1
   - 2
