--- a/src/extrapages/installations/volumen-de-voz.njk
+++ b/src/extrapages/installations/volumen-de-voz.njk
@@ -5,6 +5,7 @@ description: Camille Carlson and Brandon Carter
 navlogo: loudspeaker
 backgroundcolor: FF4FA7
 permalink: /volumen-de-voz/
+image: /img/sketches/volumen-de-voz.jpg
 volumen:
   - 1
   - 2
