--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -4,7 +4,7 @@ layout: layouts/base.njk
 
 <main>
 {% include "components/header.njk" %}
-<div class="container">
+<div class="fullcontainer">
 {{ content | safe }}
 </div>
 </main>
