made yt embed mobile friendly

--- a/src/extrapages/films/they-came-from-planet-x.njk
+++ b/src/extrapages/films/they-came-from-planet-x.njk
@@ -17,7 +17,7 @@ image: /img/films/they-came-from-planet-x.jpg
       <img src="/img/films/they-came-from-planet-x.jpg" alt="planet x still" class="post-hero installation-hero">
     </div>
     </br>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/sj78a7oQKQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="80%" height="315" src="https://www.youtube.com/embed/sj78a7oQKQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </br>
     <p>"Made in the style of a farcical wartime propaganda film, "They Came From Planet X" takes modern xenophobia juxtaposed against science fiction imagery and pokes fun at the fear of "foreign invaders". This short was made specifically for Fronteras with the hope of exploring the festival's important themes while experimenting with the look and tone of older sci-fi serials and propaganda films."</p>
     </br>
